[package]
name = "denoise-cli"
version = "0.2.0"
edition = "2021"
authors = ["Lílian Ferreira de Freitas <lily.mosquitoes@gmail.com>"]
description = "CLI wrapper for the denoising algorithm from image-recovery."
license = "AGPL-3.0-or-later"
readme = "README.md"

[dependencies]
log = "0.4"
clap = { version = "4", features = ["derive"] }
image-recovery = "0.1"
